fix: ensure text remains visible during webfont load (#197)

--- a/frontend/src/styles/app.css
+++ b/frontend/src/styles/app.css
@@ -8,6 +8,7 @@
     src: url('/assets/fonts/roboto/Roboto-Thin.ttf') format('truetype');
     font-weight: 100;
     font-style: normal;
+    font-display: swap;
   }
 
   @font-face {
@@ -15,6 +16,7 @@
     src: url('/assets/fonts/roboto/Roboto-Light.ttf') format('truetype');
     font-weight: 300;
     font-style: normal;
+    font-display: swap;
   }
 
   @font-face {
@@ -22,6 +24,7 @@
     src: url('/assets/fonts/roboto/Roboto-Regular.ttf') format('truetype');
     font-weight: 400;
     font-style: normal;
+    font-display: swap;
   }
 
   @font-face {
@@ -29,6 +32,7 @@
     src: url('/assets/fonts/roboto/Roboto-Medium.ttf') format('truetype');
     font-weight: 500;
     font-style: normal;
+    font-display: swap;
   }
 
   @font-face {
@@ -36,6 +40,7 @@
     src: url('/assets/fonts/roboto/Roboto-Bold.ttf') format('truetype');
     font-weight: 700;
     font-style: normal;
+    font-display: swap;
   }
 
   @font-face {
@@ -43,6 +48,7 @@
     src: url('/assets/fonts/roboto/Roboto-Black.ttf') format('truetype');
     font-weight: 900;
     font-style: normal;
+    font-display: swap;
   }
 }
 
